cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_289.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:165: error: DEAD_STORE
  The value written to &start (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:165:5: Write of unused value
163.   {
164.       int i, j, bits, ret = 0, wstart, wend, window, wvalue;
165.       int start = 1;
           ^
166.       BIGNUM *aa;
167.       /* Table of variables obtained from 'ctx' */
